fix pencil -> pen and add toast for Copy action